# logger_demo_ci

./: CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
src/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  LoggerLevels.h  LoggerManager.cpp  LoggerManager.h  main.cpp
